--- a/index.css
+++ b/index.css
@@ -1,6 +1,33 @@
 body{
-
+    background-color: rgb(255, 255, 255);
 }
 #navbarContainer{
-
+    background-color: rgb(255, 0, 0);
+    max-width: 100%;
+    max-height: 10%;
+    padding: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.card{
+    border: 1px solid rgb(80, 80, 80);
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    width: 200px;
+    display: inline-block;
+    justify-content: center;
+    cursor: pointer;
+}
+#kauppaContainer{
+    text-align: center;
+}
+#tuoteKuva{
+    max-width: 100%;
+    max-height: 100%;
 }
