--- a/index.css
+++ b/index.css
@@ -39,7 +39,10 @@ body {
 
 nav {
     padding: 10px;
-    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
 nav button {
