--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ nav button {
     border: none;
     padding: 8px 12px;
     cursor: pointer;
-    margin-right: 15px;
+    margin-right: 6px;
 }
 
 #formPanel {
@@ -60,10 +60,12 @@ nav button {
 .panel {
     position: fixed;
     top: 0;
-    right: -290px;
+    right: -295px;
     width: 250px;
     height: 100%;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 47, 47);
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.2);
     padding: 20px;
     transition: right 0.7s ease-in-out;
@@ -79,7 +81,7 @@ nav button {
     right: 10px;
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 24px;
     cursor: pointer;
 }
 
@@ -117,10 +119,11 @@ nav button {
 
 .modal-content {
     position: relative;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 47, 47);
     padding: 20px;
     width: 350px;
-    border-radius: 8px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -135,4 +138,14 @@ nav button {
 #newUsername, #newPassword {
     border: 1px solid #000000;
     margin: 10px 0;
+}
+
+button {
+    background-color: rgb(0, 89, 255);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
 }
