--- a/ilmoitus.css
+++ b/ilmoitus.css
@@ -138,7 +138,7 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
-#imgChamngeContainer{
+#imgChangeContainer{
     text-align: center;
 }
 #slideshowContainer{
@@ -155,5 +155,8 @@ button {
     max-height: 500;
 }
 #tuoteInfo{
-
+    text-align: center;
+}
+#tuoteNimi{
+    text-align: center;
 }
