--- a/index.css
+++ b/index.css
@@ -23,6 +23,10 @@ a{
 }
 #kauppaContainer{
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 }
 #tunnus{
     text-align: left;
@@ -148,4 +152,75 @@ button {
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
+}
+
+#detailsModal {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin: 10px;
+}
+
+#detailsModal div {
+    display: flex;
+    flex-direction: column;
+}
+
+#publishBtn {
+    margin-top: 10px;
+}
+
+.productModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+#confirmationModal {
+    position: fixed;
+    display: none;
+    top: 74px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.productModal-content {
+    position: relative;
+    background-color: rgb(255, 47, 47);
+    padding: 20px;
+    width: 350px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    text-align: center;
+}
+
+.productClose {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#productName, #productDetail, #productDescription, #productPrice, #productPicture {
+    margin: 10px 0;
+}
+
+#productDescription {
+    height: 80px;
+    resize: vertical;
+}
+
+#previewPicture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
