--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ a{
 }
 #tuoteKuva{
     max-width: 100%;
-    max-height: 100%;
+    height: 200px;
 }
 body {
     font-family: Arial, sans-serif;
@@ -79,7 +79,7 @@ nav button {
     right: 0;
 }
 
-#closeBtn {
+#closeBtn, #closeBtnPublish {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -87,6 +87,22 @@ nav button {
     border: none;
     font-size: 24px;
     cursor: pointer;
+}
+
+.published-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 8px;
+}
+
+.deleteItemBtn {
+    background-color: black;
+    color: red;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
 }
 
 #username, #password {
