--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ a{
 }
 #tuoteKuva{
     max-width: 100%;
-    height: 200px;
+    max-height: 100%;
 }
 body {
     font-family: Arial, sans-serif;
@@ -79,7 +79,7 @@ nav button {
     right: 0;
 }
 
-#closeBtn, #closeBtnPublish {
+#closeBtn {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -87,22 +87,6 @@ nav button {
     border: none;
     font-size: 24px;
     cursor: pointer;
-}
-
-.published-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ddd;
-    padding: 8px;
-}
-
-.deleteItemBtn {
-    background-color: black;
-    color: red;
-    border: none;
-    cursor: pointer;
-    font-size: 18px;
 }
 
 #username, #password {
@@ -236,6 +220,33 @@ button {
 }
 
 #previewPicture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#cartBtn{
+    width: 250px;
+    height: 50px;
+    border-radius: 20px;
+}
+#cartBtn:hover{
+    background-color: rgba(0, 89, 255, 0.568);
+}
+.centered {
+    position: absolute;
+    top: 5%;
+    right: 25px;
+    color: white;
+}
+#ostosKoriImg{
+    width:50px;
+    cursor: pointer;
+    color: rgb(255, 47, 47);
+    border-radius: 5px;
+}
+#ostosKoriImg:hover{
+    background-color: rgba(255, 47, 47, 0.938);
+}
     display: flex;
     justify-content: center;
     align-items: center;
