--- a/index.css
+++ b/index.css
@@ -97,6 +97,61 @@ nav button {
     padding: 8px;
 }
 
+#confirmDeleteModal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255, 47, 47);
+    padding: 20px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    z-index: 1000;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.yesDelete {
+    background-color: yellow;
+    color: #000000;
+    margin-right: 6px;
+}
+
+.noDelete {
+    margin-left: 6px;
+}
+
+#modalOverlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.productModal-content {
+    position: relative;
+    background-color: rgb(255, 47, 47);
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+}
+
+#confirmationModal {
+    position: fixed;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(255, 47, 47);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 8px;
+}
+
 .deleteItemBtn {
     background-color: black;
     color: red;
@@ -196,26 +251,6 @@ button {
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-}
-
-#confirmationModal {
-    position: fixed;
-    display: none;
-    top: 120px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px;
-    border-radius: 8px;
-}
-
-.productModal-content {
-    position: relative;
-    background-color: rgb(255, 47, 47);
-    padding: 20px;
-    width: 350px;
-    border-radius: 10px;
-    border: 1px solid rgb(0, 0, 0);
-    text-align: center;
 }
 
 .productClose {
