--- a/ilmoitus.css
+++ b/ilmoitus.css
@@ -185,12 +185,25 @@ img.displaySlide{
     margin: auto;
 }
 #cartBtn{
-    width: 10%;
-    height: 10%;
+    width: 250px;
+    height: 50px;
+    border-radius: 20px;
 }
 #cartBtn:hover{
     background-color: rgba(0, 89, 255, 0.568);
 }
-#tuoteNimi{
-    text-align: center;
+.centered {
+    position: absolute;
+    top: 5%;
+    right: 25px;
+    color: white;
+}
+#ostosKoriImg{
+    width:50px;
+    cursor: pointer;
+    color: rgb(255, 47, 47);
+    border-radius: 5px;
+}
+#ostosKoriImg:hover{
+    background-color: rgba(255, 47, 47, 0.938);
 }
