--- a/index.css
+++ b/index.css
@@ -122,6 +122,16 @@ nav button {
     margin-left: 6px;
 }
 
+#closeBtnPublish {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
 #modalOverlay {
     display: none;
     position: fixed;
