--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ nav button {
     right: 0;
 }
 
-#closeBtn {
+#closeBtn, #closeBtnPublish, #closeBtnShopping {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -103,6 +103,8 @@ nav button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 400px;
     background-color: rgb(255, 47, 47);
     padding: 20px;
     border: 1px solid rgb(0, 0, 0);
@@ -120,16 +122,6 @@ nav button {
 
 .noDelete {
     margin-left: 6px;
-}
-
-#closeBtnPublish {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
 }
 
 #modalOverlay {
