--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
     position: relative;
     background-color: rgb(255, 0, 0);
     max-width: 100%;
-    max-height: 10%;
     padding: 10px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
@@ -60,7 +59,7 @@ nav {
     gap: 10px;
 }
 
-#menuItems {
+/*#menuItems {
     display: none;
     flex-direction: column;
     position: absolute;
@@ -77,6 +76,32 @@ nav {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     transition: right 0.7s ease-in-out;
+}*/
+
+#menuItems {
+    max-height: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: flex-end;
+    top: calc(100% - 10px);
+    right: 0;
+    width: 250px;
+    background-color: rgb(255, 0, 0);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    padding: 0 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out;
+}
+
+#menuItems.open {
+    max-height: 500px;
+    padding: 10px;
 }
 
 #menuItems div, #menuItems button {
@@ -190,6 +215,7 @@ nav button {
 #confirmationModal {
     position: fixed;
     display: none;
+    width: 300px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
