--- a/index.css
+++ b/index.css
@@ -67,25 +67,6 @@ nav {
     gap: 10px;
 }
 
-/*#menuItems {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    align-items: flex-end;
-    top: 100%;
-    right: 0;
-    width: 250px;
-    background-color: rgb(255, 0, 0);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    padding: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    transition: right 0.7s ease-in-out;
-}*/
-
 #menuItems {
     max-height: 0;
     overflow: hidden;
@@ -142,14 +123,14 @@ nav button {
     position: fixed;
     top: 0;
     right: -295px;
-    width: 200px;
+    width: 250px;
     height: 100%;
     background-color: rgb(255, 47, 47);
     border-radius: 10px;
     border: 1px solid rgb(0, 0, 0);
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    transition: right 0.7s ease-in-out;
+    transition: right 0.5s ease-in-out;
 }
 
 .panel.open {
@@ -394,10 +375,10 @@ button {
     justify-content: center;
     align-items: center;
 }
-#ostoskoriTuoteImg{
+/*#ostoskoriTuoteImg{
     max-width: 60%;
     border-radius: 5px;
 }
     justify-content: center;
     align-items: center;
-}
+}*/
