--- a/index.css
+++ b/index.css
@@ -375,10 +375,10 @@ button {
     justify-content: center;
     align-items: center;
 }
-/*#ostoskoriTuoteImg{
+#ostoskoriTuoteImg{
     max-width: 60%;
     border-radius: 5px;
 }
     justify-content: center;
     align-items: center;
-}*/
+}
